[package]
name = "proglog"
authors = ["Seth Stadick <sstadick@gmail.com>"]
version = "0.4.0"
edition = "2021"
license = "Unlicense/MIT"
readme = "README.md"
documentation = "https://docs.rs/proglog"
homepage = "https://github.com/sstadick/proglog"
repository = "https://github.com/sstadick/proglog"
categories = ["concurrency"]
keywords = ["logging", "concurrency", "log"]
description = "Thread safe progress logging"

[features]
pretty_counts = ["thousands"]

[dependencies]
log = "0.4.27"
thousands = { version = "0.2.0", optional = true }

[dev-dependencies]
env_logger = "0.11.8"
rayon = "1.10.0"
logtest = "2.0.0"
